templates/maps-vector-server_template.yaml
---
# Source: maps-vector-server/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: maps-vector-server-release-name
  labels:
    app: maps-vector-server
    chart: maps-vector-server-0.0.1
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: maps-vector-server
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
---
# Source: maps-vector-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maps-vector-server-release-name
  labels:
    app: maps-vector-server
    chart: maps-vector-server-0.0.1
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: maps-vector-server
    release: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: maps-vector-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maps-vector-server-release-name
  labels:
    app: maps-vector-server
    chart: maps-vector-server-0.0.1
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: maps-vector-server
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: maps-vector-server
        release: release-name
      annotations:
        checksum/secrets: eca49d99e634ec7a3bd7536b44a7b4bd1ac107468db7440505c16b69e53e944c
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: maps-vector-server-release-name
          image: "docker-registry.wikimedia.org/wikimedia/operations-software-tegola:latest"
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - --config
            - /etc/tegola/config.toml
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /capabilities
              port: 8080
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 400Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/tegola        
      volumes:        
        - name: config-volume
          configMap:
            name: config-release-name
